Added checkstyle and smartcat formatter

--- a/pom.xml
+++ b/pom.xml
@@ -1,114 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.smartcat</groupId>
-	<artifactId>loadgen</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <groupId>io.smartcat</groupId>
+    <artifactId>loadgen</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-	<name>loadgen</name>
-	<description>Demo project for contextual load generator</description>
+    <name>loadgen</name>
+    <description>Demo project for contextual load generator</description>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.1.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.4.1.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <version.plugin.checkstyle>2.17</version.plugin.checkstyle>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>19.0</version>
-		</dependency>
-		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<version>1.50.5</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>1.50.5</version>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
 
-			</plugin>
+            </plugin>
 
-			<plugin>
-				<groupId>com.syncleus.maven.plugins</groupId>
-				<artifactId>maven-mongodb-plugin</artifactId>
-				<version>1.1.1</version>
-				<executions>
-					<execution>
-						<id>start</id>
-						<goals>
-							<goal>start</goal>
-						</goals>
-						<configuration>
-							<version>3.2.9</version>
-							<!-- optional, defaults to latest production release -->
+            <plugin>
+                <groupId>com.syncleus.maven.plugins</groupId>
+                <artifactId>maven-mongodb-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <execution>
+                        <id>start</id>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                        <configuration>
+                            <version>3.2.9</version>
+                            <!-- optional, defaults to latest production 
+                                release -->
 
-							<databaseDirectory>/tmp/mongotest</databaseDirectory>
-							<!-- optional, default is a new dir in java.io.tmpdir -->
+                            <databaseDirectory>/tmp/mongotest</databaseDirectory>
+                            <!-- optional, default is a new dir in java.io.tmpdir -->
 
-							<artifactDirectory>/tmp/mongoartifact</artifactDirectory>
-							<!-- optional, set directory where MongoDB artifacts are stores, default 
-								is ~/.embedmongo -->
+                            <artifactDirectory>/tmp/mongoartifact</artifactDirectory>
+                            <!-- optional, set directory where MongoDB artifacts 
+                                are stores, default is ~/.embedmongo -->
 
-							<logging>file</logging>
-							<!-- optional (file|console|none), default is console -->
+                            <logging>file</logging>
+                            <!-- optional (file|console|none), default is 
+                                console -->
 
-							<logFile>${project.build.directory}/myfile.log</logFile>
-							<!-- optional, can be used when logging=file, default is ./mongod.log -->
+                            <logFile>${project.build.directory}/myfile.log</logFile>
+                            <!-- optional, can be used when logging=file, 
+                                default is ./mongod.log -->
 
-							<logFileEncoding>utf-8</logFileEncoding>
-							<!-- optional, can be used when logging=file, default is utf-8 -->
+                            <logFileEncoding>utf-8</logFileEncoding>
+                            <!-- optional, can be used when logging=file, 
+                                default is utf-8 -->
 
-							<bindIp>127.0.0.1</bindIp>
-							<!-- optional, default is to listen on all interfaces -->
+                            <bindIp>127.0.0.1</bindIp>
+                            <!-- optional, default is to listen on all interfaces -->
 
 
-							<skip>false</skip>
-							<!-- optional, skips this plugin entirely, use on the command line 
-								like -Dmongodb.skip -->
+                            <skip>false</skip>
+                            <!-- optional, skips this plugin entirely, use 
+                                on the command line like -Dmongodb.skip -->
 
-							<defaultImportDatabase>test</defaultImportDatabase>
-							<!-- optional, name of the default database to import data -->
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop</id>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-	</build>
+                            <defaultImportDatabase>test</defaultImportDatabase>
+                            <!-- optional, name of the default database to 
+                                import data -->
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Check style on build. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${version.plugin.checkstyle}</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <configLocation>checkstyle.xml</configLocation>
+                            <!-- Apply rules for test sources as well -->
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                            <consoleOutput>true</consoleOutput>
+                            <failsOnError>true</failsOnError>
+                            <!-- Define path to checkstyle properties -->
+                            <propertiesLocation>checkstyle.properties</propertiesLocation>
+                            <excludes>**/generated/**/*</excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
