Initial impulse generator

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <version.slf4japi>1.7.21</version.slf4japi>
+        <version.logback.classic>1.1.7</version.logback.classic>
         <version.junit>4.12</version.junit>
         <source.level>1.8</source.level>
         <code.level>1.8</code.level>
@@ -57,6 +59,17 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${version.slf4japi}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${version.logback.classic}</version>
+            </dependency>
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
