--- a/data-gen/pom.xml
+++ b/data-gen/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>ranger</artifactId>
         <groupId>io.smartcat</groupId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.0.3</version>
     </parent>
 
     <artifactId>data-gen</artifactId>
