--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
     <description>Contextual data and load generator</description>
 
     <modules>
-        <module>ranger-data-generator</module>
+        <module>ranger-commons</module>
         <module>ranger-load-generator-core</module>
+        <module>ranger-data-generator</module>
+        <module>ranger-load-generator-data-generator</module>
         <module>ranger-load-generator-kafka</module>
+        <module>ranger-runner</module>
     </modules>
 
     <licenses>
@@ -43,9 +46,11 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <version.slf4j-api>1.7.21</version.slf4j-api>
         <version.logback-classic>1.1.7</version.logback-classic>
+        <version.guava>20.0</version.guava>
         <version.commons-csv>1.4</version.commons-csv>
         <version.commons-cli>1.3.1</version.commons-cli>
         <version.snakeyaml>1.18</version.snakeyaml>
+        <version.jackson-databind>2.8.8.1</version.jackson-databind>
         <version.junit>4.12</version.junit>
         <version.pitest>1.1.11</version.pitest>
         <source.level>1.8</source.level>
@@ -75,6 +80,11 @@
                 <version>${version.logback-classic}</version>
             </dependency>
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${version.guava}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
                 <version>${version.commons-csv}</version>
@@ -88,6 +98,11 @@
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${version.snakeyaml}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${version.jackson-databind}</version>
             </dependency>
 
             <dependency>
