--- a/ranger-load-generator-core/pom.xml
+++ b/ranger-load-generator-core/pom.xml
@@ -10,18 +10,18 @@
     <artifactId>ranger-load-generator-core</artifactId>
     <packaging>jar</packaging>
 
+    <name>Ranger Load Generator Core</name>
+    <description>Contains Load Generator implementation itself and common data source, rate generator and worker implementations.</description>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>io.smartcat</groupId>
+            <artifactId>ranger-commons</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
