--- a/ranger-data-generator/pom.xml
+++ b/ranger-data-generator/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.commons-math3>3.6.1</version.commons-math3>
     </properties>
 
     <dependencies>
@@ -25,6 +26,11 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${version.commons-math3}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
