enforced maven to fail if there are compiler warnings

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
                         <source>${source.level}</source>
                         <target>${code.level}</target>
                         <encoding>${project.build.sourceEncoding}</encoding>
+                        <showWarnings>true</showWarnings>
+                        <compilerArgs>
+                            <arg>-Xlint:all</arg>
+                            <arg>-Werror</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
