--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ commonsMath3Version=3.6.1
 jacksonDatabindVersion=2.8.8.1
 parboiledJavaVersion=1.1.8
 snakeyamlVersion=1.18
+commonsCsvVersion=1.4
 
 junitVersion=4.12
 spockCoreVersion=1.0-groovy-2.4
