--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ junitVersion=4.12
 spockCoreVersion=1.0-groovy-2.4
 cglibNodepVersion=3.2.0
 groovyAllVersion=2.4.3
+gsonVersion=1.1
+jsonPathVersion=2.3.0
